# royal-road-monitor

./: .gitignore  LICENSE  app.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: publish-ghcr.yaml
database/: __init__.py  queries.py
deployment/: compose.yaml  royal_road_monitor.dockerfile  stack.env
royalroad/: models.py  scraper.py
src/database/: queries.py
src/new_in_rising_stars/: __init__.py
src/new_in_rising_stars/royalroad/: models.py  scraper.py
src/new_in_rising_stars/static/: dont-show.js  fiction-card.css  watched-urls.css
src/new_in_rising_stars/templates/: new_fictions.html  watched_urls.html
src/royal_road_monitor/: __init__.py
src/royal_road_monitor/database/: __init__.py  queries.py
src/royal_road_monitor/royalroad/: __init__.py  models.py  scraper.py
src/royal_road_monitor/static/: default.css  dont-show.js  fiction-buttons.js  graph.js
src/royal_road_monitor/templates/: base.html  dont_shows.html  fiction_view.html  new_fictions.html  watched_urls.html
src/royal_road_monitor/templates/macros/: fiction_render.html
src/royal_road_monitor/tests/: test_queries.py
static/: dont-show.css  fiction-buttons.js  fiction-card.css  watched-urls.css  watched-urls.js
templates/: admin.html  base.html  data.html  dont_shows.html  homepage.html  watched.html  watched_urls.html
templates/macros/: fiction_render.html
